--- a/HZSHOP/HZSHOP/Mine/Controller/HZMineViewController.xib
+++ b/HZSHOP/HZSHOP/Mine/Controller/HZMineViewController.xib
@@ -232,8 +232,11 @@
                                                 <constraint firstAttribute="height" constant="20" id="KTi-Eg-0hf"/>
                                             </constraints>
                                         </imageView>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Le8-Fa-VFO">
+                                        <button opaque="NO" tag="300" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Le8-Fa-VFO">
                                             <rect key="frame" x="0.0" y="0.0" width="320" height="39"/>
+                                            <connections>
+                                                <action selector="myOrderClick:" destination="-1" eventType="touchUpInside" id="Tbw-ZK-5dT"/>
+                                            </connections>
                                         </button>
                                     </subviews>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -280,8 +283,11 @@
                                                         <constraint firstAttribute="height" constant="25" id="eG1-m3-8oG"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" tag="201" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3nK-oO-0Dc">
+                                                <button opaque="NO" tag="302" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3nK-oO-0Dc">
                                                     <rect key="frame" x="0.0" y="0.0" width="64" height="70"/>
+                                                    <connections>
+                                                        <action selector="myOrderClick:" destination="-1" eventType="touchUpInside" id="ZRL-1T-5eq"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -309,8 +315,11 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" tag="202" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zc7-N6-e93">
+                                                <button opaque="NO" tag="303" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zc7-N6-e93">
                                                     <rect key="frame" x="0.0" y="0.0" width="64" height="70"/>
+                                                    <connections>
+                                                        <action selector="myOrderClick:" destination="-1" eventType="touchUpInside" id="9Ty-MQ-Bha"/>
+                                                    </connections>
                                                 </button>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ytk" translatesAutoresizingMaskIntoConstraints="NO" id="TPX-Rf-5eA">
                                                     <rect key="frame" x="19.5" y="10" width="25" height="25"/>
@@ -352,8 +361,11 @@
                                                         <constraint firstAttribute="height" constant="25" id="sfW-ps-Bzn"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" tag="203" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CA8-kU-E52">
+                                                <button opaque="NO" tag="304" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CA8-kU-E52">
                                                     <rect key="frame" x="0.0" y="0.0" width="64" height="70"/>
+                                                    <connections>
+                                                        <action selector="myOrderClick:" destination="-1" eventType="touchUpInside" id="bmF-aF-7By"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -388,8 +400,11 @@
                                                         <constraint firstAttribute="width" constant="25" id="mTU-VM-wxn"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" tag="204" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cC9-hU-7YN">
+                                                <button opaque="NO" tag="305" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cC9-hU-7YN">
                                                     <rect key="frame" x="0.0" y="0.0" width="64" height="70"/>
+                                                    <connections>
+                                                        <action selector="myOrderClick:" destination="-1" eventType="touchUpInside" id="A8P-k5-XTM"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -424,8 +439,11 @@
                                                         <constraint firstAttribute="width" constant="25" id="xlb-OR-kVr"/>
                                                     </constraints>
                                                 </imageView>
-                                                <button opaque="NO" tag="200" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DGV-L4-FgC">
+                                                <button opaque="NO" tag="301" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DGV-L4-FgC">
                                                     <rect key="frame" x="0.0" y="0.0" width="64" height="70"/>
+                                                    <connections>
+                                                        <action selector="myOrderClick:" destination="-1" eventType="touchUpInside" id="9UI-YR-1tO"/>
+                                                    </connections>
                                                 </button>
                                             </subviews>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
