--- a/HZSHOP/HZSHOP/Mine/Controller/HZCouponListViewController.xib
+++ b/HZSHOP/HZSHOP/Mine/Controller/HZCouponListViewController.xib
@@ -22,19 +22,19 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="HoA-AA-HTq">
-                    <rect key="frame" x="0.0" y="20" width="320" height="548"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <rect key="frame" x="0.0" y="25" width="320" height="543"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="QTm-6V-xa5"/>
                         <outlet property="delegate" destination="-1" id="jF4-u7-Lfg"/>
                     </connections>
                 </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.95294117647058818" green="0.95294117647058818" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="HoA-AA-HTq" secondAttribute="bottom" id="1GF-RI-AE3"/>
                 <constraint firstItem="HoA-AA-HTq" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="Erl-1p-4To"/>
-                <constraint firstItem="HoA-AA-HTq" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" id="UNf-AQ-Szw"/>
+                <constraint firstItem="HoA-AA-HTq" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="5" id="UNf-AQ-Szw"/>
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="HoA-AA-HTq" secondAttribute="trailing" id="sJO-lH-YZe"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
